--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,26 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  get_it: ^8.0.2
+  google_fonts: ^6.2.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^5.4.4
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  hydrated_bloc: ^9.1.5
+  path_provider: ^2.1.4
+  flutter_staggered_grid_view: ^0.7.0
+  custom_navigation_bar: ^0.8.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.4
+  flutter_custom_clippers: ^2.1.0
+  flutter_svg: ^2.0.10+1
+  flutter_native_splash: ^2.4.1
+  cached_network_image: ^3.4.1
+  email_validator: ^3.0.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
