--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cached_network_image: ^3.4.1
   email_validator: ^3.0.0
   shared_preferences: ^2.3.3
+  firebase_dynamic_links: ^6.0.11
 
 dev_dependencies:
   flutter_test:
