Add feature app linking to app

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,12 @@ allprojects {
         google()
         mavenCentral()
     }
+
+    tasks.withType(JavaCompile).configureEach {
+        javaCompiler = javaToolchains.compilerFor {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
 }
 
 rootProject.buildDir = "../build"
