--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"it-project---zineround","appId":"1:351093878135:android:adbf74bf31140efd9c8572","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"it-project---zineround","configurations":{"android":"1:351093878135:android:adbf74bf31140efd9c8572","web":"1:351093878135:web:e9846b7326d8225e9c8572"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "it-project---zineround",
+          "appId": "1:351093878135:android:adbf74bf31140efd9c8572",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "it-project---zineround",
+          "configurations": {
+            "android": "1:351093878135:android:adbf74bf31140efd9c8572",
+            "web": "1:351093878135:web:e9846b7326d8225e9c8572"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      { "source": "/verify/**", "dynamicLinks": true },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
