--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,10 @@ dependencies:
   cached_network_image: ^3.4.1
   email_validator: ^3.0.0
   shared_preferences: ^2.3.3
-  firebase_dynamic_links: ^6.0.11
+  firebase_analytics: ^11.3.6
+  go_router: ^14.6.2
+  app_links: ^6.3.2
+#  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
