Add functions folder to .gitignore

--- a/.firebaserc
+++ b/.firebaserc
@@ -3,5 +3,9 @@
     "default": "it-project---zineround"
   },
   "targets": {},
-  "etags": {}
+  "etags": {
+    "it-project---zineround": {
+      "extensionInstances": {}
+    }
+  }
 }
