--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get_it: ^8.0.2
-  google_fonts: ^6.2.1
+  google_fonts: ^4.0.4
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
@@ -58,6 +58,11 @@ dependencies:
   firebase_analytics: ^11.3.6
   go_router: ^14.6.2
   app_links: ^6.3.2
+  image: ^4.3.0
+  mailer: ^6.3.0
+  url_launcher: ^6.3.1
+  msal_js: ^2.14.0
+  process_run: ^1.2.2+1
 #  uni_links: ^0.5.1
 
 dev_dependencies:
