--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   url_launcher: ^6.3.1
   msal_js: ^2.14.0
   process_run: ^1.2.2+1
+  http: ^1.2.2
 #  uni_links: ^0.5.1
 
 dev_dependencies:
