--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,10 @@ dependencies:
   msal_js: ^2.14.0
   process_run: ^1.2.2+1
   http: ^1.2.2
+  animated_segmented_tab_control: ^2.0.0
+  flutter_cache_manager: ^3.4.1
+  connectivity_plus: ^6.1.1
+  flutter_smart_dialog: ^4.9.8+5
 #  uni_links: ^0.5.1
 
 dev_dependencies:
