--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,14 +61,15 @@ dependencies:
   image: ^4.3.0
   mailer: ^6.3.0
   url_launcher: ^6.3.1
-  msal_js: ^2.14.0
-  process_run: ^1.2.2+1
+#  msal_js: ^2.14.0
+#  process_run: ^1.2.2+1
   http: ^1.2.2
   animated_segmented_tab_control: ^2.0.0
   flutter_cache_manager: ^3.4.1
   connectivity_plus: ^6.1.1
-  flutter_smart_dialog: ^4.9.8+5
-#  uni_links: ^0.5.1
+  workmanager: ^0.5.2
+  rich_field_controller: ^0.2.1
+  image_picker_web: ^4.0.0
 
 dev_dependencies:
   flutter_test:
