--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,11 @@ dependencies:
   connectivity_plus: ^6.1.1
   workmanager: ^0.5.2
   rich_field_controller: ^0.2.1
-  image_picker_web: ^4.0.0
+#  image_picker_web: ^4.0.0
+  like_button: ^2.0.5
+  pulp_flash: ^0.0.6
+  universal_html: ^2.2.4
+  flutter_sound: ^9.17.8
 
 dev_dependencies:
   flutter_test:
