--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   pulp_flash: ^0.0.6
   universal_html: ^2.2.4
   flutter_sound: ^9.17.8
+  video_player: ^2.9.2
+  pytorch_lite: ^4.3.1+1
 
 dev_dependencies:
   flutter_test:
@@ -102,6 +104,8 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/images/logos/
+    - assets/labels/
+    - assets/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
