--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   flutter_sound: ^9.17.8
   video_player: ^2.9.2
   pytorch_lite: ^4.3.1+1
+  url_strategy: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -104,8 +105,8 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/images/logos/
-    - assets/labels/
-    - assets/models/
+    - assets/models/nsfw-model.pt
+    - assets/labels/labels_nsfw.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
