--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  palette_generator: ^0.3.3+5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -77,7 +76,6 @@ dependencies:
   video_player: ^2.9.2
   pytorch_lite: ^4.3.1+1
   url_strategy: ^0.3.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
