--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,8 @@ dependencies:
   video_player: ^2.9.2
   pytorch_lite: ^4.3.1+1
   url_strategy: ^0.3.0
+  image_size_getter: ^2.3.0+1
+  shimmer: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
