--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ dependencies:
   url_strategy: ^0.3.0
   image_size_getter: ^2.3.0+1
   shimmer: ^3.0.0
+  flutter_image_compress: ^2.4.0
+  firebase_app_check: ^0.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
