--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,10 @@ dependencies:
   image_size_getter: ^2.3.0+1
   shimmer: ^3.0.0
   flutter_image_compress: ^2.4.0
-  firebase_app_check: ^0.3.2
+  multi_image_picker_plus: ^0.0.6
+#  firebase_app_check: ^0.3.2
+#  uuid: ^4.5.1
+#  photo_manager: ^3.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
