--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,17 +60,13 @@ dependencies:
   image: ^4.3.0
   mailer: ^6.3.0
   url_launcher: ^6.3.1
-#  msal_js: ^2.14.0
-#  process_run: ^1.2.2+1
   http: ^1.2.2
   animated_segmented_tab_control: ^2.0.0
   flutter_cache_manager: ^3.4.1
   connectivity_plus: ^6.1.1
   workmanager: ^0.5.2
   rich_field_controller: ^0.2.1
-#  image_picker_web: ^4.0.0
   like_button: ^2.0.5
-#  pulp_flash: ^0.0.6
   universal_html: ^2.2.4
   flutter_sound: ^9.17.8
   video_player: ^2.9.2
@@ -81,10 +77,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   multi_image_picker_plus: ^0.0.6
   visibility_detector: ^0.4.0+2
-  sizer: ^3.0.4
-#  firebase_app_check: ^0.3.2
-#  uuid: ^4.5.1
-#  photo_manager: ^3.6.3
+  flutter_quick_video_encoder: ^1.7.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
