--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   image: ^4.3.0
   mailer: ^6.3.0
   url_launcher: ^6.3.1
-  http: ^1.2.2
+  http: ^1.3.0
   animated_segmented_tab_control: ^2.0.0
   flutter_cache_manager: ^3.4.1
   connectivity_plus: ^6.1.1
@@ -75,9 +75,22 @@ dependencies:
   image_size_getter: ^2.3.0+1
   shimmer: ^3.0.0
   flutter_image_compress: ^2.4.0
-  multi_image_picker_plus: ^0.0.6
+#  multi_image_picker_plus: ^0.0.6
   visibility_detector: ^0.4.0+2
-  flutter_quick_video_encoder: ^1.7.2
+  video_compress: ^3.1.3
+  path: ^1.9.0
+  record: ^5.2.0
+  just_audio: ^0.9.43
+#  microphone: ^0.1.0
+#  just_audio_web: ^0.4.13
+#  flutter_file_compressor: ^0.0.7
+#  video_compress_v2: ^1.0.0+1
+#  video_compress_ds: ^3.1.6
+#  light_compressor: ^2.2.0
+
+dependency_overrides:
+  http: ^0.13.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
