--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   path: ^1.9.0
   record: ^5.2.0
   just_audio: ^0.9.43
+  audio_waveforms: ^1.2.0
 #  microphone: ^0.1.0
 #  just_audio_web: ^0.4.13
 #  flutter_file_compressor: ^0.0.7
