--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,6 @@ dependencies:
   image_size_getter: ^2.3.0+1
   shimmer: ^3.0.0
   flutter_image_compress: ^2.4.0
-#  multi_image_picker_plus: ^0.0.6
   visibility_detector: ^0.4.0+2
   video_compress: ^3.1.3
   path: ^1.9.0
@@ -83,12 +82,10 @@ dependencies:
   just_audio: ^0.9.43
   audio_waveforms: ^1.2.0
   get_thumbnail_video: ^0.7.3
-#  microphone: ^0.1.0
-#  just_audio_web: ^0.4.13
-#  flutter_file_compressor: ^0.0.7
-#  video_compress_v2: ^1.0.0+1
-#  video_compress_ds: ^3.1.6
-#  light_compressor: ^2.2.0
+  audio_video_progress_bar: ^2.0.3
+  rxdart: ^0.28.0
+  dropdown_button2: ^2.3.9
+
 
 dependency_overrides:
   http: ^0.13.1
